# readcsv

./: .gitignore  .gitlab-ci.pymodule.yml  .gitlab-ci.yml  LICENSE  Makefile  Makefile.pymodule  README.md  README_api.md  readcsv.code-workspace  setup.cfg
src/readcsv/: __init__.py  csvreader.py  examples.py  test_csvreader.py
