[metadata]
name = readcsv
version = 1.0.0
author = cjsin
author_email =
description = CSV reader base class
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjsin/readcsv
project_urls =
    Bug Tracker = https://github.com/cjsin/readcsv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
dist_dir = dist
package_dir =
    = src
packages = find:

python_requires = >= 3.0
install_requires =

[options.packages.find]
where = src

[egg_info]
tag_date = 1
